--- a/manual.html
+++ b/manual.html
@@ -1,26 +1,26 @@
-<!doctype html><html><head><meta charset="UTF-8" /><meta content="ie=edge" http-equiv="x-ua-compatible" /><meta content="font-src https://cdn.rawgit.com; script-src &apos;self&apos;" http-equiv="content-security-policy" /><meta content="" name="description" /><meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport" /><title>Immotile - Manual</title><link href="https://cdn.rawgit.com/dreampulse/computer-modern-web-font/master/fonts.css" rel="stylesheet" type="text/css" /><link href="/immotile/default.css" rel="stylesheet" type="text/css" /></head><body><div id="wrap"><div id="header"><h1><a href="immotile/index.html">Immotile</a></h1><div id="navigation"><ul><li><a href="manual.html">Manual</a></li><li><a href="getting-started.html">Getting started</a></li><li><a href="https://www.github.com/rpkarlsson/immotile">Github</a></li></ul></div></div><div class="content"></div><h1>Manual</h1><div id="table-of-contents">
+<!doctype html><html><head><meta charset="UTF-8" /><meta content="ie=edge" http-equiv="x-ua-compatible" /><meta content="default-src https:; font-src https://cdn.rawgit.com; script-src &apos;self&apos;" http-equiv="Content-Security-Policy" /><meta content="" name="description" /><meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport" /><title>Immotile - Manual</title><link href="https://cdn.rawgit.com/dreampulse/computer-modern-web-font/master/fonts.css" rel="stylesheet" type="text/css" /><link href="/immotile/default.css" rel="stylesheet" type="text/css" /></head><body><div id="wrap"><div id="header"><h1><a href="immotile/index.html">Immotile</a></h1><div id="navigation"><ul><li><a href="manual.html">Manual</a></li><li><a href="getting-started.html">Getting started</a></li><li><a href="https://www.github.com/rpkarlsson/immotile">Github</a></li></ul></div></div><div class="content"></div><h1>Manual</h1><div id="table-of-contents">
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org54b36d1">Tradeoffs</a></li>
-<li><a href="#org20a8088">Clojure</a>
+<li><a href="#orgd02644c">Tradeoffs</a></li>
+<li><a href="#org6565044">Clojure</a>
 <ul>
-<li><a href="#orgdff5af6">Example .clj page</a></li>
+<li><a href="#org92fcbf3">Example .clj page</a></li>
 </ul>
 </li>
-<li><a href="#orgcedb555">Clojurescript</a></li>
-<li><a href="#orge936832">Org mode</a></li>
-<li><a href="#org8cece6d">Posts</a></li>
-<li><a href="#orgc8b9698">Style</a></li>
-<li><a href="#orgede7126">Starting the development server</a></li>
-<li><a href="#org58480c4">Building for production</a></li>
+<li><a href="#org684e4b8">Clojurescript</a></li>
+<li><a href="#orgc8f4124">Org mode</a></li>
+<li><a href="#orga58cfb8">Posts</a></li>
+<li><a href="#orgc1f2c41">Style</a></li>
+<li><a href="#orgde56cf1">Starting the development server</a></li>
+<li><a href="#org7466f9d">Building for production</a></li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-org54b36d1" class="outline-2">
-<h2 id="org54b36d1">Tradeoffs</h2>
-<div class="outline-text-2" id="text-org54b36d1">
+<div id="outline-container-orgd02644c" class="outline-2">
+<h2 id="orgd02644c">Tradeoffs</h2>
+<div class="outline-text-2" id="text-orgd02644c">
 <p>
    Immotile is not quick. Using Emacs to generate html takes time. So the initial
 and production builds are slow. Hopefully that is compensated with auto- and hot reloading
@@ -30,9 +30,9 @@ changes after this.
 </div>
 
 
-<div id="outline-container-org20a8088" class="outline-2">
-<h2 id="org20a8088">Clojure</h2>
-<div class="outline-text-2" id="text-org20a8088">
+<div id="outline-container-org6565044" class="outline-2">
+<h2 id="org6565044">Clojure</h2>
+<div class="outline-text-2" id="text-org6565044">
 <p>
    Used by naminghe a file <code>.clj</code>. Works just like regular Clojure. Require any additional
 dependencies from the classpath with: <code>(require '[clojure.string :as str])</code>.
@@ -41,9 +41,9 @@ hiccup.
 </p>
 </div>
 
-<div id="outline-container-orgdff5af6" class="outline-3">
-<h3 id="orgdff5af6">Example .clj page</h3>
-<div class="outline-text-3" id="text-orgdff5af6">
+<div id="outline-container-org92fcbf3" class="outline-3">
+<h3 id="org92fcbf3">Example .clj page</h3>
+<div class="outline-text-3" id="text-org92fcbf3">
 <pre class="example">
 # (require '[clojure.string :as str])
 (fn [data]
@@ -57,9 +57,9 @@ hiccup.
 </div>
 
 
-<div id="outline-container-orgcedb555" class="outline-2">
-<h2 id="orgcedb555">Clojurescript</h2>
-<div class="outline-text-2" id="text-orgcedb555">
+<div id="outline-container-org684e4b8" class="outline-2">
+<h2 id="org684e4b8">Clojurescript</h2>
+<div class="outline-text-2" id="text-org684e4b8">
 <p>
    Place your Clojurescript source files inside the cljs folder inside the folder chosen as <code>:out</code> in
 the config.
@@ -80,9 +80,9 @@ Otherwise Clojurescript works as usual.
 </div>
 
 
-<div id="outline-container-orge936832" class="outline-2">
-<h2 id="orge936832">Org mode</h2>
-<div class="outline-text-2" id="text-orge936832">
+<div id="outline-container-orgc8f4124" class="outline-2">
+<h2 id="orgc8f4124">Org mode</h2>
+<div class="outline-text-2" id="text-orgc8f4124">
 <p>
    Files are generated using Emacs so it needs to be on your <code>$Path</code>. Should support all the
 usual org mode functionality that's available when exporting from Emacs.
@@ -93,9 +93,9 @@ of the rest of the website.
 </div>
 
 
-<div id="outline-container-org8cece6d" class="outline-2">
-<h2 id="org8cece6d">Posts</h2>
-<div class="outline-text-2" id="text-org8cece6d">
+<div id="outline-container-orga58cfb8" class="outline-2">
+<h2 id="orga58cfb8">Posts</h2>
+<div class="outline-text-2" id="text-orga58cfb8">
 <p>
 Needs to have a date and a title attached to the meta. Should return the following:
 </p>
@@ -108,9 +108,9 @@ Needs to have a date and a title attached to the meta. Should return the followi
 </div>
 
 
-<div id="outline-container-orgc8b9698" class="outline-2">
-<h2 id="orgc8b9698">Style</h2>
-<div class="outline-text-2" id="text-orgc8b9698">
+<div id="outline-container-orgc1f2c41" class="outline-2">
+<h2 id="orgc1f2c41">Style</h2>
+<div class="outline-text-2" id="text-orgc1f2c41">
 <p>
 Add a <code>.css</code> file to the <code>source/public</code> folder, will be moved to the root of the build.
 </p>
@@ -122,9 +122,9 @@ Add a <code>.css</code> file to the <code>source/public</code> folder, will be m
 </div>
 
 
-<div id="outline-container-orgede7126" class="outline-2">
-<h2 id="orgede7126">Starting the development server</h2>
-<div class="outline-text-2" id="text-orgede7126">
+<div id="outline-container-orgde56cf1" class="outline-2">
+<h2 id="orgde56cf1">Starting the development server</h2>
+<div class="outline-text-2" id="text-orgde56cf1">
 <p>
 Invoke immotile.core/-main with <code>dev</code> as the argument.
 </p>
@@ -139,9 +139,9 @@ $ clj -J--add-modules -Jjava.xml.bind -m immotile.core dev
 </div>
 
 
-<div id="outline-container-org58480c4" class="outline-2">
-<h2 id="org58480c4">Building for production</h2>
-<div class="outline-text-2" id="text-org58480c4">
+<div id="outline-container-org7466f9d" class="outline-2">
+<h2 id="org7466f9d">Building for production</h2>
+<div class="outline-text-2" id="text-org7466f9d">
 <p>
 Invoke immotile.core/-main with <code>build-prod</code> as the argument.
 </p>
