--- a/test/resources/expected/org.html
+++ b/test/resources/expected/org.html
@@ -2,9 +2,9 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#sec-1">1. Hello</a>
+<li><a href="">1. Hello</a>
 <ul>
-<li><a href="#sec-1-1">1.1. Something</a></li>
+<li><a href="">1.1. Something</a></li>
 </ul>
 </li>
 </ul>
@@ -14,11 +14,12 @@
 #+DATE 2018-02-28 Wed
 </p>
 
-<div id="outline-container-sec-1" class="outline-2">
-<h2 id="sec-1"><span class="section-number-2">1</span> Hello</h2>
+<div id="" class="outline-2">
+<h2 id=""><span class="section-number-2">1</span> Hello</h2>
 <div class="outline-text-2" id="text-1">
-</div><div id="outline-container-sec-1-1" class="outline-3">
-<h3 id="sec-1-1"><span class="section-number-3">1.1</span> Something</h3>
+</div>
+<div id="" class="outline-3">
+<h3 id=""><span class="section-number-3">1.1</span> Something</h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 A bit of text
